--- a/install
+++ b/install
@@ -5,7 +5,6 @@ pip install -v code/fabm
 cmake -B build/gotm -S code/gotm -DFABM_BASE=code/fabm -DCMAKE_BUILD_TYPE=Release -G Ninja -DCMAKE_INSTALL_PREFIX=${CONDA_PREFIX}
 cmake --build build/gotm --target install
 
-cd code/pygetm
-source ./install
+source code/pygetm/install
 
 pip install -v code/fabmos
